[project]
name = "voiceagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[mcp,silero,turn-detector]~=1.2",
    "livekit-plugins-deepgram>=1.4.1",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-elevenlabs>=1.0",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.3",
    "tensorflow>=2.20.0",
    "livekit-plugins-cartesia>=1.4.1",
    "livekit-plugins-openai>=1.4.1",
]
